# stm32-clion

./: .gitignore  .gitmodules  README
template/: CMakeLists.txt
